# my-portfolio

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt  resume.html  vercel.json
.github/workflows/: ci.yml  name:  push-test.yml  test.yml
api/: api-status.py  health.py  status.py
k8s/base/: argocd-app.yaml  deployment.yaml  nginx-proxy-deployment.yaml  service.yaml  status-api-deployment.yaml
services/status-api/: README.md  app.py
tests/: 1
